argocd/svc.load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.lan
spec:
  type: LoadBalancer
