argocd/ingress-route.http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.lan`)
      middlewares:
        - name: redirect
      services:
        - name: argocd-server
          port: 80
